[package]
name = "tonic_test"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
prost-types = "0.7"
tonic = "0.4"
tokio = { version = "1.0", features = [ "rt-multi-thread", "macros" ] }
flume = "0.10.1"

[build-dependencies]
tonic-build = "0.4"
